Fix z-index of the dialog

--- a/components/Dialog/Dialog.module.css
+++ b/components/Dialog/Dialog.module.css
@@ -9,6 +9,7 @@
     justify-content: center;
     align-items: center;
     animation: fadeIn 0.3s ease alternate;
+    z-index: 1000;
 }
 
 .dialog {
